# CompilerKarel

./: .gitignore  Doxyfile  README.md  compiler.cpp  gramatica.cpp  gramaticaKarel.cpp  instrucciones.cpp  karel1.cpp  main (1).cpp  main (2).cpp  main.cpp  prueba.txt  script.sh
inc/: gramatica.h  gramaticaKarel.h  karel1.h
src/: gramatica.cpp  gramaticaKarel.cpp  karel1.cpp
tst/: CMakeLists.txt  gramaticaKarel_test.cpp  main.cpp
